# shadow-starter-pack

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  foundry.toml  package-lock.json  package.json
.github/workflows/: build_and_test.yml
cli/: Cargo.toml
cli/src/: macros.rs  main.rs  utils.rs
cli/src/cmd/: deploy.rs  events.rs  fork.rs  mod.rs
cli/src/core/: deploy.rs  mod.rs
cli/src/core/actions/: deploy.rs  events.rs  fork.rs  mod.rs
cli/src/core/decode/: event.rs  mod.rs  param.rs  token.rs
cli/src/core/resources/: artifacts.rs  etherscan.rs  mod.rs  shadow.rs
cli/src/decode/: event.rs  mod.rs  param.rs
cli/src/resources/: artifacts.rs  etherscan.rs  mod.rs  shadow.rs
cli/src/resources/fixtures/: shadow.json
cli/src/resources/fixtures/UniswapV2Router02.sol/: UniswapV2Router02.json
contracts/patches/: trade.patch
contracts/src/UniswapV2Router02/contracts/: UniswapV2Router02.sol
contracts/src/UniswapV2Router02/contracts/interfaces/: IERC20.sol  IUniswapV2Factory.sol  IUniswapV2Router02.sol
contracts/src/UniswapV2Router02/contracts/libraries/: UniswapV2Library.sol
contracts/test/: UniswapV2Router02.t.sol
patches/: trade.patch
src/UniswapV2Router02/: Contract.sol
src/UniswapV2Router02/contracts/: UniswapV2Router02.sol
src/UniswapV2Router02/contracts/interfaces/: IERC20.sol  IUniswapV2Factory.sol  IUniswapV2Pair.sol  IUniswapV2Router01.sol  IUniswapV2Router02.sol  IWETH.sol
src/UniswapV2Router02/contracts/libraries/: SafeMath.sol  TransferHelper.sol  UniswapV2Library.sol
test/: UniswapV2Router02.t.sol
