[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-json-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-json-abi" }
alloy-primitives = { git = "https://github.com/alloy-rs/core", package = "alloy-primitives" }
clap = { version = "4.3.12", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
