[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi", features=["eip712"] }
alloy-json-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-json-abi" }
alloy-primitives = { git = "https://github.com/alloy-rs/core", package = "alloy-primitives" }
anvil = { git = "https://github.com/foundry-rs/foundry", package = "anvil", rev = "684d394db587bef427475a660c72013e97ef71d2", features = ["cmd"] }
anvil-core = { git = "https://github.com/foundry-rs/foundry", package = "anvil-core", rev = "684d394db587bef427475a660c72013e97ef71d2" }
async-trait = "0.1.71"
clap = { version = "4.3.12", features = ["derive"] }
colored_json = "3.2.0"
ethabi = {version="18.0.0", features= ["serde"] }
ethers = "2.0"
hex = "0.4.3"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tempfile = "3.6.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
yansi = "0.5.1"
